<resources>
    <string name="app_name">Anytask</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_main">Главная</string>
    <string name="nav_courses">Мои курсы</string>
    <string name="nav_deadlines">Мои дедлайны</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_about">О программе</string>
    <string name="title_activity_tasks">TasksActivity</string>
    <string name="anytask_about">AnyTask — платформа для взаимодействия преподавателей и студентов в процессе обучения.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="bundle_organization_name">name</string>
    <string name="bundle_organization_id">organization_id</string>
    <string name="bundle_course_id">course_id</string>
    <string name="bundle_course_name">course_name</string>
    <string name="bundle_course">course</string>
    <string name="bundle_organization">organization</string>
    <string name="bundle_task">task</string>
</resources>
