<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_main" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_menu_courses"
            android:title="@string/nav_courses" />
        <item
            android:id="@+id/nav_deadlines"
            android:icon="@drawable/ic_menu_deadlines"
            android:title="@string/nav_deadlines" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
